# CHANGELOG

## in-dev
- Refactored progress indicator into jQuery UI modal with callable member methods
- Redesigned interaction with default post data form
- Refactored script/style enqueue and print system

## 2.0.1
- Updated styles for tabs
- Fixed markup for tabs
- Renamed main plugin file

## 2.0
- Updated to be more extensible
- Now automatically regenerates attachment metadata (aka regenerate thumbnails) when rebasing attachments.
- Added nonce security and role validation to default postdata module.
- Updated to use asynchronous calls for updates, improves handling of page by not blocking interaction or redraw.

## 0.1
- Initial commit. Includes simple interaction to resave post data by post type and status.