@@ -4,6 +4,7 @@
 - Refactored progress indicator into jQuery UI modal with callable member methods
 - Redesigned interaction with default post data form
 - Refactored script/style enqueue and print system
+- Added taxonomy support
 
 ## 2.0.1
 - Updated styles for tabs
